@@ -1,0 +1,9 @@
+#include "FBLib_TMSOSDMenu.h"
+
+int OSDMenuGetNrOfLines (void)
+{
+  TRACEENTER();
+  TRACEEXIT();
+
+  return Menu[CurrentMenuLevel].NrLines;
+}
