@@ -1092,3 +1092,4 @@ The following functions accept any form a path. The INI and language INI functio
             Added: OMDM_Text - an OSDMemo that won't scoll beyond its last line
             Modified: OSDMenuSetMemo() can either set OMDM_Memo or OMDM_Text now
             Added: OSDMenuSetLineHeight() and enums tLineHeight to allow for a different number of lines
+            Added: OSDMenuGetNrOfLines() to query the current number of lines
